--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,1 @@
-<html>
-  <head>
-    <title><%= title %></title>
-  </head>
-  <body>
-    <%- include('_header'); %>
-
-    <h1>Authentication / <%= title %></h1>
-
-    <%- include('_footer'); %>
-  </body>
-</html> 
+<h1>Habit Tracker / <%= title %></h1>
