--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -16,4 +16,8 @@
       <input type="submit" class="btn btn-primary m-auto float-right" value="Sign In">
     </div>
   </form>
+
+  <p>
+    <a href="/users/auth/google">Google Sign In / Sign Up</a>
+  </p>
 </div> 
