--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -23,4 +23,7 @@
       <input type="submit" value="Sign Up" class="btn btn-primary m-auto float-right">
     </div>
   </form>
+  <p>
+    <a href="/users/auth/google">Google Sign In / Sign Up</a>
+  </p>
 </div> 
